# aninit

./: .gitignore  Cargo.toml  README.md  aninit  solve
.github/workflows/: blank.yml  release.yml  rust.yml  rustbuild.yml
src/: aninit.rs  fetch_ld.rs  lib.rs  libc_deb.rs  libc_version.rs  main.rs  opts.rs  patch_bin.rs  solve  solvepy.rs  template.py  unstrip_libc.rs  update_list.py
src/elf/: build_id.rs  mod.rs
src/scanner/: Dockerfile  ld-linux-x86-64.so.2  libc.so.6  scanner  scannere  scanneree  solve
