[package]
name = "aninit"
version = "3.3.1"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2021"
description = "automate starting binary exploit challenges from pwninit. this version is remaked "
repository = "https://github.com/antkss/aninit"
readme = "README.md"
keywords = ["pwn", "init", "binary", "elf", "exploit"]
license = "MIT"

[profile.release]
opt-level = 'z'
lto = true
strip=true

[dependencies]
twoway = "0.2.2"
structopt = "0.3.26"
goblin = "0.6.1"
ar = "0.9.0"
tar = "0.4.40"
rust-lzma = "0.5.1"
umask = "2.1.0"
is_executable = "1.0.1"
tempfile = "3.9.0"
colored = "2.1.0"
snafu = "0.7.5"
ex = "0.1.3"
derive_setters = "0.1.6"
strfmt = "0.2.4"
maplit = "1.0.2"
flate2 = "1.0.28"
zstd = "0.12.4"
version-compare = "0.1.1"
hex = "0.4.3"
regex = "1.8.1"
once_cell = "1.17.1"
thiserror = "1.0"

[dependencies.reqwest]
version = "0.11.23"
features = ["blocking"]
